--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <div class="container">
    <div id="game-title">
-     <h4>Welcome To <a href="https://www.citonhub.com/profile#/profile/activities/YungScript">Yung<span class="script">Script</span></a> Typing Game</h4>
+     <h4>Welcome To <a href="https://www.citonhub.com/profile#/profile/activities/YungScript">Archy<span class="script">Script</span></a> Typing Game</h4>
    </div>
   <div id="current-level-time-div">Type the EXACT WORD BELOW in <span id="seconds">4</span> second(s)</div> 
   <header id="header">
